--- a/main.tex
+++ b/main.tex
@@ -371,8 +371,7 @@
 \pagenumbering{gobble}
 \pagenumbering{arabic}
 \pagestyle{fancy}
-% \include{introduction}
-\include{thermomechanics}
+\include{introduction}
 \include{continuum_mechanics_and_finite_element_method}
 \include{mechanical_problem}
 \include{thermo_problem}
@@ -381,7 +380,7 @@
 \include{solvers_for_coupled_fields}
 \include{acceleration_techniques}
 \include{validation_acceleration}
-% \include{conclusions}
+\include{conclusions}
 \appendix
 % \include{annex}
 
