--- a/thermo_mechanical_problem.tex
+++ b/thermo_mechanical_problem.tex
@@ -1,5 +1,5 @@
 \chapter{Thermo-mechanical problem}
-\label{chapter:thermo_mechanical_problem}
+\label{ch:thermo_mechanical_problem}
 
 The full thermo-mechanical analysis is conducted in the subsequent chapter using the overall framework discussed in Chapter~\ref{ch:continuum_mechanics}.
 The independent mechanical and thermal problems discussed in the Chapters~\ref{ch:mechanical_problem} and \ref{ch:thermal_problem} serve as a roadmap for the developments that come next.
