--- a/validation_acceleration.tex
+++ b/validation_acceleration.tex
@@ -5,6 +5,9 @@ The methods considered are the fixed-point method (see Section~\ref{sec:fixed_po
 The use of predictors is also considered (see Section~\ref{sec:predictor}) as a way to improve efficiency.
 It focuses on two thermomechanical examples for which reference solutions are available in the literature: the quasi-static finite strain thermo-elastic expansion of an infinitely long-thick walled cylinder and the necking of a thermo-elastoplastic circular bar.
 
+
+\jvc{Add the description of the machine used to run the problems}
+
 % \section{Second Danilovskaya problem}
 %
 % The second Danilovskaya problem is proposed in \cite{danilovskaya_dynamical_1952} and it is used frequently in the literature for the validation of a fully coupled thermomechanical model (\cite{farhat_unconditionally_1991}, \cite{tosaka_boundary_1991}, \cite{tamma_effective_1992}, \cite{tanaka_application_1995} and \cite{danowski_computational_2014}).
